ui: fix link hover background color contrast issue

--- a/sass/theme/dark.scss
+++ b/sass/theme/dark.scss
@@ -19,8 +19,8 @@ $text-2: lighten($bg-0, 40%);
 
   --border-color: var(--bg-2);
 
-  --primary-color: #5598dc;
-  --hover-color: black;
+  --primary-color: #1e3a5f;
+  --hover-color: #ffffff;
 
   .social > img, .search-button > img {
     filter: invert(1);
