--- a/sass/theme/light.scss
+++ b/sass/theme/light.scss
@@ -17,6 +17,6 @@ $text-2: darken($bg-0, 30%);
 
   --border-color: var(--bg-2);
 
-  --primary-color: #5598dc;
-  --hover-color: black;
+  --primary-color: #1e3a5f;
+  --hover-color: #ffffff;
 }
